# tennis-court-detection

./: .gitignore  .travis.yml  .travis_build.sh  CMakeLists.txt  CourtLineCandidateDetector.cpp  CourtLineCandidateDetector.h  CourtLinePixelDetector.cpp  CourtLinePixelDetector.h  DebugHelpers.cpp  DebugHelpers.h  GlobalParameters.cpp  GlobalParameters.h  LICENSE  LicenseChecker.cpp  LicenseChecker.h  Line.cpp  Line.h  Makefile  README.md  TennisCourtFitter.cpp  TennisCourtFitter.h  TennisCourtModel.cpp  TennisCourtModel.h  TimeMeasurement.cpp  TimeMeasurement.h  build.sh  conanfile.txt  geometry.cpp  geometry.h  main.cpp
